Incluindo blocos nas colunas

--- a/01_exercico_divisoes/index.html
+++ b/01_exercico_divisoes/index.html
@@ -10,15 +10,21 @@
 <body>
     <div class="principal">
 
-        <div class="topo">
-            
-        </div>
+        <div class="topo"></div>
 
         <div class="meio">
 
-            <div class="coluna_esquerda"></div>
+            <div class="coluna_esquerda">
+                <div class="esquerda_bloco_01"></div>
+                <div class="esquerda_bloco_02"></div>
+                <div class="esquerda_bloco_03"></div>
+            </div>
 
-            <div class="coluna_direita"></div>
+            <div class="coluna_direita">
+                <div class="direita_bloco_01"></div>
+                <div class="direita_bloco_02"></div>
+                <div class="direita_bloco_03"></div>
+            </div>
         </div>
 
         <div class="rodape"></div>
