--- a/01_exercico_divisoes/index.html
+++ b/01_exercico_divisoes/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>01 - Layout Divisões</title>
 </head>
-<body>
-    <div class="principal">
-
+<body>   
+    <div class="container">        
         <div class="topo"></div>
 
         <div class="meio">
@@ -25,9 +25,9 @@
                 <div class="direita_bloco_02"></div>
                 <div class="direita_bloco_03"></div>
             </div>
-        </div>
+        </div>   
 
         <div class="rodape"></div>
-    </div>
+    </div>    
 </body>
 </html>
