Etapa final a divisão básica

--- a/01_exercico_divisoes/index.html
+++ b/01_exercico_divisoes/index.html
@@ -15,15 +15,27 @@
         <div class="meio">
 
             <div class="coluna_esquerda">
-                <div class="esquerda_bloco_01"></div>
+                <div class="esquerda_bloco_01">
+                    <div class="bloco_01_item"></div>
+                    <div class="bloco_01_item"></div>
+                    <div class="bloco_01_item"></div>
+                    <div class="bloco_01_item"></div>
+                </div>
                 <div class="esquerda_bloco_02"></div>
                 <div class="esquerda_bloco_03"></div>
             </div>
 
             <div class="coluna_direita">
-                <div class="direita_bloco_01"></div>
+                <div class="direita_bloco_01">
+                    <div></div>
+                    <div></div>
+                </div>
                 <div class="direita_bloco_02"></div>
-                <div class="direita_bloco_03"></div>
+                <div class="direita_bloco_03">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
             </div>
         </div>   
 
