--- a/02_layout_dentista/index.html
+++ b/02_layout_dentista/index.html
@@ -6,12 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>02 - Layput Dente Clean</title>
+    <title>02 - Layout Dente Clean</title>
 </head>
 <body>
     <div class="container">
         <header>
-            <nav></nav>
+            <div class="logo">
+                <img src="img/logo.jpg" alt="Foto da Logo">
+            </div>
+            <nav>
+                <ul class="menu">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Serviços</a></li>
+                    <li><a href="#">Quem Somos</a></li>
+                    <li><a href="#">Contato</a></li>
+                </ul>
+            </nav>
         </header>
     
         <main>
