Finalizando o básico do layout

--- a/02_layout_dentista/index.html
+++ b/02_layout_dentista/index.html
@@ -29,7 +29,7 @@
     
         <main>
             <section>
-                <div class="conteudo alinhar_esquerda">
+                <div class="conteudo_principal alinhar_esquerda">
                     <h1>Sorria sem dor de cabeça</h1>
                     <p><strong>Uma boa saúde bucal pode evitar dores de cabeça.</strong></p>
                     <p>
@@ -37,16 +37,22 @@
                         "There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain..."
                     </p>
                 </div>
-                <div class="imagem"></div>
+                <div class="imagem_principal">
+                    <img src="img/img1.jpg" alt="Imagem de uma moça sorrindo">
+                </div>
 
             </section>
             <section>
-                <div class="imagem"></div>
-                <div class="conteudo alinhar_direita">
-                    <h1>Sorria sem dor de cabeça</h1>
-                    <p><strong>Uma boa saúde bucal pode evitar dores de cabeça.</strong></p>
+                <div class="imagem_secundaria">
+                    <img src="img/img2.jpg" alt="Imagem de uma moça sorrindo">
+                </div>
+                <div class="conteudo_secundario alinhar_direita">
+                    <h2>Bem vindo à Dente Clean</h2>
                     <p>
                         "Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."
+                        "There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain..."
+                        "Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."
+                        "There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain..."
                         "There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain..."
                     </p>
                 </div>                
