--- a/02_layout_dentista/V2/index.html
+++ b/02_layout_dentista/V2/index.html
@@ -29,7 +29,7 @@
     
         <main>
             <section class="destaque">
-                <div class="conteudo_destaque alinhar_esquerda">
+                <div class="conteudo_destaque">
                     <h1>Sorria sem dor de cabeça</h1>
                     <p><strong>Uma boa saúde bucal pode evitar dores de cabeça.</strong></p>
                     <p>
