--- a/01_Modelos_Layouts/03_layout_estética/index.html
+++ b/01_Modelos_Layouts/03_layout_estética/index.html
@@ -6,9 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css"/>
     <link rel="stylesheet" href="css/style.css"/>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap" rel="stylesheet">
     <title>Bella Estética</title>
 </head>
 <body>
-    
+    <div class="conteudo">
+        <header>
+            <nav></nav>
+            <div></div>
+        </header>
+        <article></article>
+        <aside></aside>
+        <footer class="rodape"></footer>
+    </div>
 </body>
 </html>
