Incluindo menu, banner e logo no layout estética

--- a/01_Modelos_Layouts/03_layout_estética/index.html
+++ b/01_Modelos_Layouts/03_layout_estética/index.html
@@ -14,8 +14,21 @@
 <body>
     <div class="conteudo">
         <header>
-            <nav></nav>
-            <div></div>
+            <nav class="menu">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Quem Somos</a></li>
+                    <li><a href="#">Serviço</a></li>
+                    <li><a href="#">Clientes</a></li>
+                    <li><a href="#">Contato</a></li>
+                </ul>
+            </nav>
+            <div class="logo">
+                <img src="img/logo.jpg" alt="Logo do site" />
+            </div>
+            <div class="banner">
+                <img src="img/banner.jpg" alt="Banner principal" />
+            </div>
         </header>
         <article></article>
         <aside></aside>
