Atualização do código e inclusão do gabarito

--- a/01_Modelos_Layouts/01_exercicio_divisoes/index.html
+++ b/01_Modelos_Layouts/01_exercicio_divisoes/index.html
@@ -8,29 +8,29 @@
     <title>01 - Layout Divisões</title>
 </head>
 <body>   
-    <div class="container">        
-        <div class="topo"></div>
+    <div id="container">        
+        <div id="topo"></div>
 
-        <div class="meio">
+        <div id="meio">
 
-            <div class="coluna_esquerda">
-                <div class="esquerda_bloco_01">
+            <div id="coluna_esquerda">
+                <div id="esquerda_bloco_01">
                     <div class="bloco_01_item"></div>
                     <div class="bloco_01_item"></div>
                     <div class="bloco_01_item"></div>
                     <div class="bloco_01_item"></div>
                 </div>
-                <div class="esquerda_bloco_02"></div>
-                <div class="esquerda_bloco_03"></div>
+                <div id="esquerda_bloco_02"></div>
+                <div id="esquerda_bloco_03"></div>
             </div>
 
-            <div class="coluna_direita">
-                <div class="direita_bloco_01">
+            <div id="coluna_direita">
+                <div id="direita_bloco_01">
                     <div></div>
                     <div></div>
                 </div>
-                <div class="direita_bloco_02"></div>
-                <div class="direita_bloco_03">
+                <div id="direita_bloco_02"></div>
+                <div id="direita_bloco_03">
                     <div></div>
                     <div></div>
                     <div></div>
@@ -38,7 +38,7 @@
             </div>
         </div>   
 
-        <div class="rodape"></div>
+        <div id="rodape"></div>
     </div>    
 </body>
 </html>
