--- a/01_Modelos_Layouts/02_layout_dentista/index.html
+++ b/01_Modelos_Layouts/02_layout_dentista/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <title>02 - Layout Dentista</title>
 </head>
 <body>
-</body>
-    <h1>Olá Mundo!</h1>
+    <main>
+        <header></header>
+        <section></section>
+        <footer></footer>
+    </main>
+</body>    
 </html>  
