--- a/01_Modelos_Layouts/02_layout_dentista/index.html
+++ b/01_Modelos_Layouts/02_layout_dentista/index.html
@@ -10,7 +10,27 @@
 </head>
 <body>
     <main>
-        <header></header>
+        <header>
+            <div id="logo">
+                <img src="fontes/logo.jpg" alt="Logo">
+            </div>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#">Home</a>
+                    </li>
+                    <li>
+                        <a href="#">Serviços</a>
+                    </li>
+                    <li>
+                        <a href="#">Quem Somos</a>
+                    </li>
+                    <li>
+                        <a href="#">Contato</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
         <section></section>
         <footer></footer>
     </main>
