Ajustando HTML e finalizando o CSS.

--- a/01_Modelos_Layouts/02_layout_dentista/index.html
+++ b/01_Modelos_Layouts/02_layout_dentista/index.html
@@ -31,8 +31,29 @@
                 </ul>
             </nav>
         </header>
-        <section></section>
+
+        <section>
+            <div id="banner">
+                <img src="fontes/banner.jpg" alt="Banner de Destaque" />
+            </div>
+        </section>
+
+        <section id="aviso">
+            <div id="container">
+                <div id="img-container">
+                    <img src="fontes/img2.jpg" alt="Imagem do conteúdo" />
+                </div>
+                <div id="texto-container">
+                    <h1>Bem vindo à Dente Clean</h1>
+                    <p>
+                        Podemos já vislumbrar o modo pelo qual o julgamento imparcial das eventualidades garante a contribuição de um grupo importante na determinação do orçamento setorial. Todavia, a complexidade dos estudos efetuados promove a alavancagem dos relacionamentos verticais entre as hierarquias. Não obstante, a percepção das dificuldades maximiza as possibilidades por conta do impacto na agilidade decisória. A prática cotidiana prova que a execução dos pontos do programa auxilia a preparação e a composição das direções preferenciais no sentido do progresso.
+                    </p>
+                </div>
+            </div>
+        </section>
+
         <footer></footer>
+
     </main>
 </body>    
 </html>  
