--- a/01_Modelos_Layouts/03_layout_estética/index.html
+++ b/01_Modelos_Layouts/03_layout_estética/index.html
@@ -5,10 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/estilo.css">
     <title>03 - Layout Estética</title>
 </head>
 <body>
+    <main>
+        <header>
+            <nav>
+                <ul>
+                    <li><a href="#"></a>Home</li>
+                    <li><a href="#"></a>Quem Somos</li>
+                    <li><a href="#"></a>Serviços</li>
+                    <li><a href="#"></a>Clientes</li>
+                    <li><a href="#"></a>Contato</li>
+                </ul>
+            </nav>
+        </header>
 
- 
+        <section></section>
+        
+        <section></section>
+
+        <footer></footer>
+
+    </main>
 </body>    
 </html>  
