--- a/01_Modelos_Layouts/03_layout_estética/index.html
+++ b/01_Modelos_Layouts/03_layout_estética/index.html
@@ -2,7 +2,6 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/estilo.css">
@@ -11,13 +10,16 @@
 <body>
     <main>
         <header>
+            <div id="logo">
+                <img src="img/logo.jpg" alt="Logo do site" />
+            </div>
             <nav>
                 <ul>
-                    <li><a href="#"></a>Home</li>
-                    <li><a href="#"></a>Quem Somos</li>
-                    <li><a href="#"></a>Serviços</li>
-                    <li><a href="#"></a>Clientes</li>
-                    <li><a href="#"></a>Contato</li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Quem Somos</a></li>
+                    <li><a href="#">Serviços</a></li>
+                    <li><a href="#">Clientes</a></li>
+                    <li><a href="#">Contato</a></li>
                 </ul>
             </nav>
         </header>
@@ -29,5 +31,5 @@
         <footer></footer>
 
     </main>
-</body>    
-</html>  
+</body> 
+</html>
