--- a/01_Modelos_Layouts/03_layout_estética/index.html
+++ b/01_Modelos_Layouts/03_layout_estética/index.html
@@ -24,7 +24,9 @@
             </nav>
         </header>
 
-        <section></section>
+        <section id="banner">
+            <img src="img/banner.jpg" alt="Banner do site" />
+        </section>
         
         <section></section>
 
